Prevent usernames, posts and signatures from overflowing
Make long-ass words wrap around if you have to, as opposed to making the
page unnecessarily wide (or worse, make a post flow out of the readable
area)

--- a/Themes/Christmas_Season_2/css/compat.css
+++ b/Themes/Christmas_Season_2/css/compat.css
@@ -789,10 +789,12 @@ div#pollmoderation
 {
 	width: 15em;
 	float: left;
+	word-wrap: break word;
 }
 .post
 {
 	clear: right;
+	word-wrap: break-word;
 }
 .postarea
 {
@@ -1596,6 +1598,7 @@ dl
 {
 	width: 100%;
 	border-top: 1px #666 solid;
+	word-wrap: break-word;
 }
 .signature h5
 {
